# datagen

./: README.md  daten.csv  generator.py  main.py  plan.md  pyproject.toml
